src/test/deca/syntax/invalid/double_CBRACE.res
Error: Could not find or load main class fr.ensimag.deca.syntax.ManualTestSynt
